# voip

./: build.gradle  groups  names.txt  project.config
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/arch3/lge/com/voip/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/g729b/: CMakeLists.txt  main-g729-dec.c  main-g729-enc.c
app/src/main/cpp/g729b/g729AnnexB/: acelp_co.c  bits.c  calcexc.c  cod_ld8k.c  coder.c  coder.mak  de_acelp.c  dec_gain.c  dec_lag3.c  dec_ld8k.c  dec_sid.c  decoder.c  decoder.mak  dspfunc.c  dtx.c  dtx.h  filter.c  gainpred.c  ld8k.h  lpc.c  lpcfunc.c  lspdec.c  lspgetq.c  octet.h  oper_32b.c  oper_32b.h  p_parity.c  pitch.c  post_pro.c  pre_proc.c  pred_lt3.c  pst.c  pwf.c  qsidgain.c  qsidlsf.c  qua_gain.c  qua_lsp.c  readme.txt  sid.h  tab_dtx.c  (+8 more)
app/src/main/cpp/gsm0610/: CMakeLists.txt  native-lib.cpp
app/src/main/java/arch3/lge/com/voip/: ConferenceActivity.java  ConferenceArrayAdapter.java  ContactActivity.java  ContactArrayAdapter.java  DialpadActivity.java  LoginActivity.java  MainTabActivity.java  RegisterActivity.java
app/src/main/java/arch3/lge/com/voip/controller/: CallController.java  ConferenceController.java  DeviceContorller.java  RequestCallObserver.java  UserController.java
app/src/main/java/arch3/lge/com/voip/listener/: BroadcastReceiverOnBootComplete.java  TCPListenerService.java  UDPListenerService.java  WifiReceiver.java
app/src/main/java/arch3/lge/com/voip/ui/: BaseCallActivity.java  CallingActivity.java  ConferenceActivity.java  ConferenceArrayAdapter.java  ConferenceCallingActivity.java  ConferenceRegisterActivity.java  ContactActivity.java  ContactArrayAdapter.java  (+13 more)
app/src/main/res/layout/: activity_calling.xml  activity_conference.xml  activity_conference_calling.xml  activity_conference_list.xml  activity_conference_register.xml  activity_conference_register_add_phone.xml  activity_contact.xml  activity_contact_list_add.xml  activity_contact_list_edit.xml  activity_contact_list_mgr.xml  activity_contact_select.xml  activity_dialpad.xml  activity_login.xml  activity_main_tab.xml  activity_received_call.xml  activity_recovery.xml  activity_recovery_pwd.xml  activity_register.xml  activity_request_call.xml  activity_user_account.xml  conference_item.xml  contact_list_edit_item.xml  contact_list_item.xml  contact_list_select_item.xml
app/src/main/res/menu/: mainmenu.xml
app/src/main/res/raw/: t18k16bit.raw  t28k16bit.raw  t38k16bit.raw  t48k16bit.raw
app/src/main/res/values/: array.xml  colors.xml  strings.xml  styles.xml
app/src/test/java/arch3/lge/com/voip/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+28 files in other folders)
